--- a/install/ctf.yourdomain.com.conf
+++ b/install/ctf.yourdomain.com.conf
@@ -17,7 +17,7 @@
    </Directory>
 
    <Directory "/var/www/ctf.yourdomain.com/htdocs/">
-      Options -Indexes FollowSymLinks MultiViews
+      Options -Indexes +FollowSymLinks +MultiViews
       AllowOverride None
       Order Deny,Allow
       Allow from all
